// protoc --go_out=rbac-manager/pkg/proto --go-grpc_out=rbac-manager/pkg/proto rbac-manager/pkg/proto/rbac.proto
syntax = "proto3";

package proto;

option go_package = "./";

service Build {
  rpc BuildDockerfile (BuildDockerfileRequest) returns (BuildDockerfileReply) {}
}

message Image {
  string name = 1;
  string version = 2;
  string pusher = 3;
  string repository = 4;
}

message BuildDockerfileRequest {
  Image img = 1;
  string project = 2;
}

message BuildDockerfileReply {
  bool Succeed = 1;
}